# mex-release

./: .cruft.json  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  mex.bat  pyproject.toml  release.py  requirements.txt  setup_commit_signing.py
.github/workflows/: cookiecutter.yml  cve-scan.yml  linting.yml  open-code.yml  opencode.yml  release.yml  renovatebot.yml  testing.yml
docs/: conf.py  index.rst
mex/release/: cli.py  emoji.py  main.py  release.py  setup-commit-signing.sh  setup_commit_signing.py  sign.py
tests/: conftest.py  test_cli.py  test_emoji.py  test_release.py  test_sign.py
